--- a/scss/pages/_portfolio.scss
+++ b/scss/pages/_portfolio.scss
@@ -9,5 +9,5 @@
 @include testimonialGenerator("authorB");
 @include testimonialGenerator("authorC");
 
-// @include backgroundShapeGenerator("contents", "left", url(../Resources/universal/randomShapeLeft1.svg));
-// @include backgroundShapeGenerator("testimonialSection", "right", url(../Resources/universal/randomShapeRight1.svg));
+// @include backgroundShapeGenerator("contents", "left", url(Resources/universal/randomShapeLeft1.svg));
+// @include backgroundShapeGenerator("testimonialSection", "right", url(Resources/universal/randomShapeRight1.svg));
