--- a/scss/main.css
+++ b/scss/main.css
@@ -246,7 +246,7 @@ h5 {
   width: auto;
   min-height: 50px;
   margin-right: 25px;
-  background-image: url(../Resources/pages/index/circle-img-holder.svg);
+  background-image: url(Resources/pages/index/circle-img-holder.svg);
   background-repeat: no-repeat;
   background-size: cover;
   padding: 2vmin;
@@ -403,13 +403,13 @@ h5 {
   padding-right: 5%;
   padding-left: 5%;
   z-index: 0;
-  background-image: url(../Resources/universal/randomShapes.svg);
+  background-image: url(Resources/universal/randomShapes.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
 
 #contents.red {
-  background-image: url(../Resources/universal/randomShapesRed.svg);
+  background-image: url(Resources/universal/randomShapesRed.svg);
 }
 
 #footer {
@@ -596,12 +596,15 @@ h5 {
   margin: 0;
   width: 100%;
   height: 50vh;
-  background-image: url(../Resources/universal/header.svg);
+  background-image: url(Resources/universal/header.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "Logo ." "Title Image" "Subtitle Image" ". .";
+      grid-template-areas: "Logo ."
+ "Title Image"
+ "Subtitle Image"
+ ". .";
   -ms-grid-rows: 1fr 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr 1fr;
   -ms-grid-columns: 1fr 1fr;
@@ -1097,7 +1100,8 @@ nav.red::before {
   background-size: 100% 100%;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: ". connect connect connect connect ." ". area1 area2 area3 area4 .";
+      grid-template-areas: ". connect connect connect connect ."
+ ". area1 area2 area3 area4 .";
   -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
   -ms-grid-columns: 2fr 1fr 1fr 1fr 1fr 2fr;
@@ -1116,7 +1120,7 @@ nav.red::before {
 }
 
 .socialButton.red {
-  border: 4px solid #e53f3f;
+  border: 4px solid #e53;
 }
 
 .footer.red {
@@ -1143,7 +1147,7 @@ nav.red::before {
   background-image: url(../Resources/universal/superFooter.svg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position-x: center;
+  background-position-x:nter;
 }
 
 .superFooter.red {
@@ -1271,7 +1275,11 @@ nav.red::before {
   right: 0;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: ". . ." "Title1 Title1 Title1" "Button1 Button1 ." ". Button2 Button2" "Title2 Title2 Title2";
+      grid-template-areas: ". . ."
+ "Title1 Title1 Title1"
+ "Button1 Button1 ."
+ ". Button2 Button2"
+ "Title2 Title2 Title2";
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
   -ms-grid-rows: 1fr 1fr 2fr 2fr 1fr;
