Fixed image paths issue

--- a/scss/pages/_lifear_splash.scss
+++ b/scss/pages/_lifear_splash.scss
@@ -1,5 +1,5 @@
 #lifeARSplashContent{
-    background-image: url(Resources/pages/lifear/lifear_splash_background.svg);
+    background-image: url(../Resources/pages/lifear/lifear_splash_background.svg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     position: fixed;
