Finally fixed image paths issue

--- a/scss/sections/_superFooter.scss
+++ b/scss/sections/_superFooter.scss
@@ -13,7 +13,7 @@
     width:100%;
     height: 100px;
     margin-top: -1px;
-    background-image: url(../Resources/universal/superFooter.svg);
+    background-image: url(./Resources/universal/superFooter.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
