--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -34,7 +34,7 @@
     margin: 0;
     width:100%;
     height: 50vh;
-    background-image: url(../Resources/universal/header.svg);
+    background-image: url(./Resources/universal/header.svg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 
@@ -53,7 +53,7 @@
         height: 85vh; 
     }
     &.red{
-        background-image: url(../Resources/universal/header-red.svg);
+        background-image: url(./Resources/universal/header-red.svg);
     }
 }
 @media only screen and (max-width: 600px) {
