--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -125,7 +125,7 @@ nav::before {
   right: 0;
   z-index: -1;
   width: 100%;
-  background-image: url(../Resources/universal/menu.svg);  
+  background-image: url(./Resources/universal/menu.svg);  
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position-x: right;
