Haha, that was a joke. Now it is actually fixed

--- a/scss/pages/_lifear_info_pages.scss
+++ b/scss/pages/_lifear_info_pages.scss
@@ -1,5 +1,5 @@
 #ActivismSection{
-    background-image: url(./Resources/pages/lifear/lifear_activism_background2.svg);
+    background-image: url(/..Resources/pages/lifear/lifear_activism_background2.svg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin-left: -5.5%;
