--- a/scss/components/_classes.scss
+++ b/scss/components/_classes.scss
@@ -25,7 +25,7 @@
     width: auto;
     min-height: 50px;
     margin-right: 25px;
-    background-image: url(./Resources/pages/index/circle-img-holder.svg);
+    background-image: url(/Resources/pages/index/circle-img-holder.svg);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 2vmin;
