--- a/scss/main.css
+++ b/scss/main.css
@@ -246,7 +246,7 @@ h5 {
   width: auto;
   min-height: 50px;
   margin-right: 25px;
-  background-image: url(./Resources/pages/index/circle-img-holder.svg);
+  background-image: url(/Resources/pages/index/circle-img-holder.svg);
   background-repeat: no-repeat;
   background-size: cover;
   padding: 2vmin;
@@ -403,13 +403,13 @@ h5 {
   padding-right: 5%;
   padding-left: 5%;
   z-index: 0;
-  background-image: url(./Resources/universal/randomShapes.svg);
+  background-image: url(/Resources/universal/randomShapes.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
 
 #contents.red {
-  background-image: url(./Resources/universal/randomShapesRed.svg);
+  background-image: url(/Resources/universal/randomShapesRed.svg);
 }
 
 #footer {
@@ -596,7 +596,7 @@ h5 {
   margin: 0;
   width: 100%;
   height: 50vh;
-  background-image: url(./Resources/universal/header.svg);
+  background-image: url(../Resources/universal/header.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   display: -ms-grid;
@@ -617,7 +617,7 @@ h5 {
 }
 
 .header.red {
-  background-image: url(./Resources/universal/header-red.svg);
+  background-image: url(../Resources/universal/header-red.svg);
 }
 
 @media only screen and (max-width: 600px) {
@@ -796,7 +796,7 @@ nav::before {
   right: 0;
   z-index: -1;
   width: 100%;
-  background-image: url(./Resources/universal/menu.svg);
+  background-image: url(../Resources/universal/menu.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position-x: right;
@@ -922,7 +922,7 @@ nav::before {
 }
 
 nav.red::before {
-  background-image: url(./Resources/universal/menu-red.svg);
+  background-image: url(/Resources/universal/menu-red.svg);
 }
 
 @media screen and (max-width: 500px) {
@@ -944,28 +944,28 @@ nav.red::before {
   -ms-grid-row: 2;
   -ms-grid-column: 2;
   grid-area: area1;
-  background-image: url(./Resources/universal/linkedin.svg);
+  background-image: url(../Resources/universal/linkedin.svg);
 }
 
 .area2 {
   -ms-grid-row: 2;
   -ms-grid-column: 3;
   grid-area: area2;
-  background-image: url(./Resources/universal/facebook.svg);
+  background-image: url(../Resources/universal/facebook.svg);
 }
 
 .area3 {
   -ms-grid-row: 2;
   -ms-grid-column: 4;
   grid-area: area3;
-  background-image: url(./Resources/universal/twitter.svg);
+  background-image: url(../Resources/universal/twitter.svg);
 }
 
 .area4 {
   -ms-grid-row: 2;
   -ms-grid-column: 5;
   grid-area: area4;
-  background-image: url(./Resources/universal/mail.svg);
+  background-image: url(../Resources/universal/mail.svg);
 }
 
 .superFooter {
@@ -1092,7 +1092,7 @@ nav.red::before {
   margin: 0;
   width: 100%;
   height: 50%;
-  background-image: url(./Resources/universal/footer.svg);
+  background-image: url(../Resources/universal/footer.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   display: -ms-grid;
@@ -1120,7 +1120,7 @@ nav.red::before {
 }
 
 .footer.red {
-  background-image: url(./Resources/universal/footer-red.svg);
+  background-image: url(/Resources/universal/footer-red.svg);
 }
 
 .footerIcon {
@@ -1140,14 +1140,14 @@ nav.red::before {
   width: 100%;
   height: 100px;
   margin-top: -1px;
-  background-image: url(./Resources/universal/superFooter.svg);
+  background-image: url(../Resources/universal/superFooter.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position-x: center;
 }
 
 .superFooter.red {
-  background-image: url(./Resources/universal/superFooter-red.svg);
+  background-image: url(/Resources/universal/superFooter-red.svg);
 }
 
 #testimonialSection {
@@ -1261,7 +1261,7 @@ nav.red::before {
 }
 
 #lifeARSplashContent {
-  background-image: url(./Resources/pages/lifear/lifear_splash_background.svg);
+  background-image: url(../Resources/pages/lifear/lifear_splash_background.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   position: fixed;
@@ -1359,7 +1359,7 @@ nav.red::before {
 }
 
 #ActivismSection {
-  background-image: url(./Resources/pages/lifear/lifear_activism_background2.svg);
+  background-image: url(/..Resources/pages/lifear/lifear_activism_background2.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   margin-left: -5.5%;
