Updated LifeAR pages and improves scaling

--- a/scss/components/_themeing.scss
+++ b/scss/components/_themeing.scss
@@ -42,6 +42,7 @@
     @media screen and (max-width: 500px){
         nav.#{$name}::before {
             background-color: $color;
+            background-image: unset;
         }
     }
 }
