--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -1,7 +1,9 @@
 $blue: rgb(63, 88, 229);
+$blueDarker: rgb(50, 73, 195);
 $green:rgb(127, 220, 84);
 $yellow:rgb(215, 202, 64);
 $red:rgb(229, 63, 63);
+$redDarker: rgb(195, 50, 50);
 $teal: rgb(7, 152, 186);
 $backgroundColor: rgb(236, 248, 254);
 $backgroundColorRed: rgb(254, 236, 236);
