--- a/scss/base/_builtins.scss
+++ b/scss/base/_builtins.scss
@@ -1,11 +1,15 @@
 html{
     height:100%;
-    background-color:white;
+    background-color:$blueDarker;
+    &.red{
+        background-color:$redDarker;
+    }
 }
 
 body {
     font-family: 'Nunito', sans-serif;
     margin: 0;
+    background-color: white;
 }
 
 a{
@@ -54,4 +58,10 @@ table{
     width: 100%;
     border: 5px solid $blue;
     border-radius: 17px;
+}
+
+video{
+    border-radius: 35px;
+    background-color: $backgroundColor;
+    padding: 10px;
 }
