--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -1,17 +1,3 @@
-
-.innerMenu{
-  margin-left:5%;
-}
-
-.myList {
-  margin: 10px 0;
-  font-size: calc(8px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
-  line-height: calc(2em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));;
-}
-.myList:first-child {
-  margin-top: 0;
-}
-
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -134,42 +120,39 @@ nav::before {
   transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-@media screen and (max-width: 500px){
-  nav::before {
-    background-color: $blue;
-    background-image: unset;
-  }
+
+#list{
+  list-style: none;
+  margin-top: 10vh;
+  margin-right: 5%;
+  width: 30vw;
+}
+.innerMenu{
+  list-style: none;
 }
 
-.innerMenuLink, .menuLink{
-  font-size: 2em;
-  text-decoration: none;
-  font-weight: 500;
-  font-style: bold;
+.navText{//outermost text
+    color: white;
+    font-size: 5.3vh;
+    line-height: 1.5em;
+    transform: font-weight 0.2s ease;
 }
-.menuLink{
-   color: white;
- }
-.innerMenuLink{
-   color: #d5d7fc;
- }
-.myList{
-  transform: translateX(100%);
-  transition: color .15s, transform .5s;
-  transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+
+.navTextInner{
+    color: $backgroundColor;
+    font-size: 4.5vh;
+    line-height: 1.3em;
+    transform: font-weight 0.2s ease;
 }
-#list{
-  margin-top: 10vh;
-  width: 20em;
-}
+
 #list:nth-child(1) {
   transition-delay: 0s, 100ms;
 }
 #list:nth-child(2) {
   transition-delay: 0s, 150ms;
 }
-.menuLink:hover, .menuLink:focus, .innerMenuLink:hover, .innerMenuLink:focus {
-  font-weight: bold;
+.navText:hover, .navText:focus, .navTextInner:hover, .navTextInner:focus {
+  font-weight: bolder;
 }
 
 #navcheck:checked > * {
@@ -206,4 +189,21 @@ nav::before {
   filter: blur(2px);
   overflow: hidden;
 }
+
+@media screen and (max-width: 500px){
+  nav::before {
+    background-color: $blue;
+    background-image: unset;
+  }
+  nav{
+    padding-left: 50px;
+  }
+  #list {
+    list-style: none;
+    margin-top: 10vh;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 @include navForColor("red", $red);
