--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -7,9 +7,9 @@
     background-color: $backgroundColor;
     padding: 0px 30px;
     overflow: hidden;//as we scale during the animation, the text leaks out of the box
-    font-size: 3.4vmin;
+    font-size: 4vmin;
 
-    min-height: 45vh;
+    min-height: 45vmin;
 
     &.red{
         background-color: $backgroundColorRed;
@@ -22,7 +22,7 @@
 }
 
 .carousel{
-    min-height: 45vh;
+    min-height: 45vmin;
     width:100%;
     align-content: center;
     justify-content: center;
