--- a/scss/pages/_slappy-sandwich.scss
+++ b/scss/pages/_slappy-sandwich.scss
@@ -1,5 +1,16 @@
 @media screen and (max-width: 700px){
     .doohickey:nth-child(5){
-        display:none
+        display:none;
+    }
+}
+@media screen and (max-width: 450px){
+    .doohickey:nth-child(4){
+        display:none;
+    }
+}
+
+@media screen and (max-width: 350px){
+    .doohickey{
+        display:none;
     }
 }
